samples/_failures_safe/1761094136_dae5b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49473498.c: In function ‘main’:
./samples/SAFE/__tmp_49473498.c:171: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_49473498.c:170:5: error: expected declaration or statement at end of input
  170 |     if
      |     ^~
